<resources>
    <string name="app_name">Esports Logo Maker</string>
    <string name="images">Images</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="our_more_apps">Our More Apps</string>
    <string name="share_app">Share App</string>
    <string name="contact_us">Contact Us</string>

    <string name="rate_us">Rate Us</string>
    <string name="choose_one">Choose One</string>

    <string name="home">Home</string>
    <string name="my_work">My Work</string>

    <string name="are_you_sure">Are you sure you want to exit the app?</string>
    <string name="are_you_sure_editing">Are you sure you want to exit Editing Screen?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="import_shape">Import\nShape</string>
    <string name="import_sticker">Import\nSticker</string>

    <string name="pdf">PDF</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="layers">Layers</string>
    <string name="sticker">Stickers</string>
    <string name="add_text">Add Text</string>

    <string name="opacity">Opacity</string>
    <string name="shapes">Shapes</string>
    <string name="change_text">Change Text</string>

    <string name="font">Font</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="text_style">Text Style</string>

    <string name="type_here">Type Here</string>

    <string name="save_image_file">Save Image File</string>
    <string name="or">or</string>
    <string name="save_pdf_file">Save PDF File</string>

    <string name="save_png">Save as PNG </string>
    <string name="share_png">Share as PNG </string>
    <string name="save_jpg">Save as JPG</string>
    <string name="share_jpg">Share as JPG</string>
    <string name="save_pdf">Save as PDF</string>
    <string name="share_pdf">Share as PDF</string>
    <string name="cancel">Cancel</string>
    <string name="share_file">Share File</string>

    <string name="temp_image">temp_image.jpg</string>
    <string name="temp_images_dir">temp_images</string>

    <string name="something_went_wrong">Something went wrong</string>


    <item name="imagePath" type="id" />

</resources>