<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/nav_rate_us"
        android:icon="@drawable/ic_round_star"
        android:title="@string/rate_us" />
    <item
        android:id="@+id/nav_contact_us"
        android:icon="@drawable/ic_round_contact_mail"
        android:title="@string/contact_us" />
    <item
        android:id="@+id/nav_share_app"
        android:icon="@drawable/ic_round_share"
        android:title="@string/share_app" />
    <item
        android:id="@+id/nav_privacy_policy"
        android:icon="@drawable/ic_round_policy"
        android:title="@string/privacy_policy" />

    <item
        android:id="@+id/nav_more_apps"
        android:icon="@drawable/ic_round_more_apps"
        android:title="@string/our_more_apps" />


</menu>
